--- a/operators/contrib/pom.xml
+++ b/operators/contrib/pom.xml
@@ -19,7 +19,7 @@
 
 
   <properties>
-    <malhar.version>3.8.0-rts-3.9.2</malhar.version>
+    <malhar.version>3.9.0-rts-3.10.1-SNAPSHOT</malhar.version>
   </properties>
 
   <dependencies>
