--- a/app-templates/hdfs-to-s3-sync/pom.xml
+++ b/app-templates/hdfs-to-s3-sync/pom.xml
@@ -19,8 +19,8 @@
   <description>Ingest and backup hadoop HDFS data to Amazon S3 for data upload from hadoop to Amazon.</description>
 
   <properties>
-    <apex.version>3.6.0</apex.version>
-    <malhar.version>3.9.0-rts-3.10.0</malhar.version>
+    <apex.version>3.7.0-rts-3.10.1-SNAPSHOT</apex.version>
+    <malhar.version>3.9.0-rts-3.10.1-SNAPSHOT</malhar.version>
     <apex.apppackage.classpath>lib/*.jar</apex.apppackage.classpath>
     <apex.apppackage.tags>app-template, hdfs, s3, sync</apex.apppackage.tags>
     <apex.apppackage.longDescription>README.md</apex.apppackage.longDescription>
