--- a/app-templates/kafka-to-elastic-search-transform/pom.xml
+++ b/app-templates/kafka-to-elastic-search-transform/pom.xml
@@ -21,8 +21,8 @@
   <description>Ingest records from kafka into JSON format and output to elasticsearch store.</description>
 
   <properties>
-    <apex.version>3.7.0-rts-3.9.2</apex.version>
-    <malhar.version>3.8.0-rts-3.9.2</malhar.version>
+    <apex.version>3.7.0-rts-3.10.1-SNAPSHOT</apex.version>
+    <malhar.version>3.9.0-rts-3.10.1-SNAPSHOT</malhar.version>
     <apex.apppackage.classpath>lib/*.jar</apex.apppackage.classpath>
     <apex.apppackage.tags>app-template, kafka, elasticsearch, filter, process</apex.apppackage.tags>
     <apex.apppackage.longDescription>README.md</apex.apppackage.longDescription>
